@@ -1,5 +1,4 @@
 import pytest
-import pyroute2
 import shlex
 import time
 
@@ -57,3 +56,46 @@ class TestLldpDot3(object):
                    for k, v in out.items()
                    if k.startswith(pfx)}
             assert out == expected
+
+    def test_autoneg_power(self, links, lldpd, lldpcli, namespaces):
+        links(namespaces(1), namespaces(2))
+        with namespaces(1):
+            lldpd()
+        with namespaces(2):
+            lldpd()
+            result = lldpcli(
+                *shlex.split("configure dot3 power pd "
+                             "supported enabled paircontrol "
+                             "powerpairs spare "
+                             "class class-3 "
+                             "type 1 source both priority low "
+                             "requested 20000 allocated 5000"))
+            assert result.returncode == 0
+            time.sleep(2)
+        with namespaces(1):
+            # Did we receive the request?
+            out = lldpcli("-f", "keyvalue", "show", "neighbors", "details")
+            assert out['lldp.eth0.port.power.requested'] == '20000'
+            assert out['lldp.eth0.port.power.allocated'] == '5000'
+            # Send an answer we agree to give almost that (this part
+            # cannot be automated, lldpd cannot take this decision).
+            result = lldpcli(
+                *shlex.split("configure dot3 power pse "
+                             "supported enabled paircontrol powerpairs "
+                             "spare class class-3 "
+                             "type 1 source primary priority high "
+                             "requested 20000 allocated 19000"))
+            assert result.returncode == 0
+            time.sleep(2)
+        with namespaces(2):
+            # Did we receive that?
+            out = lldpcli("-f", "keyvalue", "show", "neighbors", "details")
+            assert out['lldp.eth1.port.power.requested'] == '20000'
+            assert out['lldp.eth1.port.power.allocated'] == '19000'
+        with namespaces(1):
+            # Did we get an echo back? This part is handled
+            # automatically by lldpd: we confirm we received the
+            # answer "immediately".
+            out = lldpcli("-f", "keyvalue", "show", "neighbors", "details")
+            assert out['lldp.eth0.port.power.requested'] == '20000'
+            assert out['lldp.eth0.port.power.allocated'] == '19000'
