@@ -2,6 +2,7 @@ lldpd (0.9.9)
   * Changes:
     + lldpcli can now display local interfaces with LLDP data sent on
       each of them ("show interfaces").
+    + As Dot3 PD device, echo back allocated value from PSE device.
   * Fix:
     + Don't remove interfaces when they are released from a bridge.
     + Don't use "expect stop" with Upstart. It's buggy.
